mar-188, add removeNotice endpoint, upd swagger
